# avtdl

./: .gitignore  DESCRIPTION.md  Dockerfile  Dockerfile-basic  EXAMPLES.md  LICENSE  PLUGINS.md  README.md  avtdl.py  example.config.yml  feed_parser.py  filters.py  interfaces.py  pyproject.toml  requirements.txt  run_command.py  send_jabber.py  text_file.py  youtube_rss.py  yt_info.py
.github/workflows/: publish-container.yml  publish-exe.yml  publish-pypi.yml  python-publish.yml  release.yml
avtdl/: avtdl.py
avtdl/core/: actions.py  actors.py  cache.py  chain.py  config.py  cookies.py  db.py  download.py  formatters.py  info.py  interfaces.py  loggers.py  monitors.py  plugins.py  request.py  runtime.py  state.py  utils.py  webui.py  yaml.py
avtdl/plugins/discord/: __init__.py  webhook.py
avtdl/plugins/execute/: run_command.py
avtdl/plugins/fc2/: fc2.py
avtdl/plugins/file/: __init__.py  download.py  text_file.py
avtdl/plugins/filters/: __init__.py  filters.py  format.py
avtdl/plugins/iwara/: __init__.py  iwara.py
avtdl/plugins/nicochannel/: __init__.py  nicochannel.py  nicochannel_live.py
avtdl/plugins/nitter/: __init__.py  nitter.py
avtdl/plugins/rplay/: __init__.py  rplay.py
avtdl/plugins/rss/: __init__.py  generic_rss.py
avtdl/plugins/twitcast/: __init__.py  twitcast_monitor.py
avtdl/plugins/twitch/: __init__.py  twitch.py
avtdl/plugins/twitter/: __init__.py  endpoints.py  extractors.py  filters.py  spaces.py  twitter.py  twitter_user.py
avtdl/plugins/url/: url.py
avtdl/plugins/utils/: utils.py
avtdl/plugins/view/: __init__.py  view.py
avtdl/plugins/withny/: __init__.py  extractors.py  live.py  withny.py  withny_live.py
avtdl/plugins/xmpp/: __init__.py  msg2jbr_slixmpp.py  send_jabber.py
avtdl/plugins/youtube/: __init__.py  common.py  community_info.py  feed_info.py  video_info.py  (+6 more)
avtdl/ui/: actors.js  autoform.js  chains.js  config.html  config.js  fields.js  navigation.js  schema.js  styles.css  utils.js
core/: bus.py  chain.py  config.py  db.py  info.py  interfaces.py  loggers.py  monitors.py  plugins.py  utils.py
plugins/core/: chain.py  config.py  filters.py  interfaces.py
plugins/discord/: webhook.py
plugins/execute/: __init__.py  run_command.py
plugins/fc2/: __init__.py  fc2.py
plugins/file/: __init__.py  text_file.py
plugins/filters/: filters.py
plugins/gmail/: __init__.py  gmail.py
plugins/nitter/: nitter.py
plugins/rss/: __init__.py  feed_parser.py  generic_rss.py  video_info.py  youtube_rss.py  yt_info.py
plugins/twitcast/: twitcast_monitor.py
plugins/twitch/: twitch.py
plugins/url/: __init__.py  url.py
plugins/xmpp/: msg2jbr.py  msg2jbr_aioxmpp.py  msg2jbr_slixmpp.py  send_jabber.py
plugins/youtube/: __init__.py  common.py  community_info.py  feed_info.py  utils.py  video_info.py  youtube_chat.py  youtube_community.py  youtube_feed.py  youtube_rss.py
tests/edge/: test_chains.py  test_examples.py  test_plugins.py
tests/unit/: test_cache.py  test_cookies.py  test_execute.py  test_filters.py  test_format.py  test_from_file.py  test_headers_file.py  test_pagination.py  test_rate_limit.py  test_to_file.py  test_twitter_filters.py  test_yaml.py
(+39 files in other folders)
